--- a/devybigboard-client/src/components/board.scss
+++ b/devybigboard-client/src/components/board.scss
@@ -156,7 +156,7 @@
         }
 
         .big-board {
-            padding: 10px 20px 20px 20px;
+            padding: 25px 20px 20px 20px;
             max-height: 100vh;
             overflow: auto;
             display: grid;
@@ -243,6 +243,26 @@
                 user-select: none;
             }
         }
+
+        &.tier-break {
+            border-top: 5px solid #ff6666;
+
+            &::before {
+                content: 'Tier Break';
+                position: absolute;
+                top: -20px;
+                left: 50%;
+                transform: translateX(-50%);
+                background-color: #ff6666;
+                color: white;
+                font-size: 12px;
+                padding: 2px 6px;
+                border-radius: 4px;
+                white-space: nowrap;
+                pointer-events: none;
+            }
+        }
+
     }
 }
 
