--- a/devybigboard-client/src/components/board.scss
+++ b/devybigboard-client/src/components/board.scss
@@ -246,7 +246,7 @@
 
         &.tier-break {
             border-top: 5px solid #ff6666;
-
+           
             &::before {
                 content: 'Tier Break';
                 position: absolute;
@@ -258,6 +258,21 @@
                 font-size: 12px;
                 padding: 2px 6px;
                 border-radius: 4px;
+                white-space: nowrap;
+                pointer-events: none;
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                right: 0px;
+                top: 0px;
+                height: 100%;
+                width: 5px;
+                background-color: #ff6666;
+                color: white;
+                font-size: 12px;
+                border-radius: 0px 0px 4px 0px;
                 white-space: nowrap;
                 pointer-events: none;
             }
