--- a/devybigboard-client/src/components/board.scss
+++ b/devybigboard-client/src/components/board.scss
@@ -84,6 +84,14 @@
                 background: rgba(0, 123, 255, 0.2);
                 border: 1px solid #007bff;
             }
+
+            .player-adp {
+                font-size: 0.85em;
+                color: #999;
+                margin-left: 8px;
+                white-space: nowrap;
+            }
+
         }
 
         .add-btn {
@@ -246,7 +254,7 @@
 
         &.tier-break {
             border-top: 5px solid #ff6666;
-           
+
             &::before {
                 content: 'Tier Break';
                 position: absolute;
