--- a/devybigboard-client/src/components/board.scss
+++ b/devybigboard-client/src/components/board.scss
@@ -287,6 +287,66 @@
         }
 
     }
+
+    .big-board-header {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding: 10px 35px 10px 15px;
+        background-color: #f8f9fa;
+        border-bottom: 2px solid #ddd;
+        position: relative;
+
+        .help-icon-wrapper {
+            position: relative;
+            display: inline-block;
+            cursor: pointer;
+            outline: none;
+
+            .help-label {
+                font-weight: bold;
+                color: #007bff;
+                text-decoration: underline;
+            }
+
+            .help-content {
+                display: none;
+                position: absolute;
+                top: 125%;
+                right: 0;
+                background-color: #ffffff;
+                border: 1px solid #ccc;
+                padding: 10px;
+                border-radius: 8px;
+                box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+                width: 250px;
+                z-index: 10;
+                font-size: 0.9em;
+                color: #333;
+                p {
+                    margin-bottom: 8px;
+                }
+            }
+
+            &:hover .help-content,
+            &:focus-within .help-content {
+                display: block;
+            }
+        }
+    }
+
+
+
+    .big-board-footer {
+        padding: 15px 20px;
+        background-color: #f8f9fa;
+        border-top: 2px solid #ddd;
+        font-weight: bold;
+        text-align: center;
+        color: #333;
+    }
+
+
 }
 
 * {
