--- a/devybigboard-client/src/components/board.scss
+++ b/devybigboard-client/src/components/board.scss
@@ -130,8 +130,8 @@
     .big-board-wrapper {
         width: 100%;
         height: 100%;
-        min-width: 1400px;
-
+        max-width: 100%;
+        overflow-x: auto;
         .menu {
             width: 100%;
             display: flex;
@@ -168,8 +168,9 @@
             max-height: 100vh;
             overflow: auto;
             display: grid;
-            grid-template-columns: repeat(var(--teams), 1fr);
-            grid-template-rows: repeat(var(--rounds), 150px);
+            grid-template-columns: repeat(var(--teams), minmax(90px, 1fr));
+            grid-template-rows: repeat(var(--rounds), minmax(90px, 150px));
+
             gap: 25px 10px;
 
 
@@ -323,6 +324,7 @@
                 z-index: 10;
                 font-size: 0.9em;
                 color: #333;
+
                 p {
                     margin-bottom: 8px;
                 }
