--- a/devybigboard-client/src/components/board.scss
+++ b/devybigboard-client/src/components/board.scss
@@ -6,7 +6,8 @@
 
     .player-list {
         transition: width 0.3s ease, padding 0.3s ease;
-        overflow: hidden; // important
+        overflow-y: auto;
+        overflow-x: hidden;
         flex-shrink: 0;
         border: 1px solid #ccc;
         background: #fff;
@@ -37,7 +38,7 @@
             display: none;
             align-items: center;
             justify-content: flex-end;
-            padding: 0px 5px 5px 0px;
+            padding: 0px 5px 8px 0px;
             cursor: pointer;
             gap: 5px;
         }
@@ -158,7 +159,6 @@
         width: 100%;
         height: 100%;
         max-width: 100%;
-        overflow-x: auto;
 
         .menu {
             width: 100%;
@@ -433,7 +433,15 @@
             .filters {
                 padding: 10px 0;
                 margin-bottom: 0px;
+                justify-content: start;
+                gap: 1em;
             }
+
+            .scroll-list {
+                overflow: scroll;
+                max-height: 35vh;
+            }
+
 
         }
 
