added style and bubble menu

--- a/devybigboard-client/src/components/app.scss
+++ b/devybigboard-client/src/components/app.scss
@@ -115,16 +115,23 @@
 }
 
 @media (max-width: 768px) {
-    .board-parameters {
-        min-width: 100% !important;
-        max-width: 100% !important;
-        height: 100%;
-        border-radius: 0px;
-        box-shadow: none;
-        padding: 30px 20px;
-    }
+
 
     .app-wrapper {
-        flex-direction: column;
+
+        .main-component .board-parameters {
+            min-width: 100% !important;
+            max-width: 100% !important;
+            height: 100%;
+            border-radius: 0px;
+            box-shadow: none;
+            padding: 30px 20px;
+            overflow: hidden;
+        }
     }
+
+
+.app-wrapper {
+    flex-direction: column;
+}
 }
