small text size

--- a/devybigboard-client/src/components/board.scss
+++ b/devybigboard-client/src/components/board.scss
@@ -226,11 +226,13 @@
         .position {
             margin-top: 15px;
             text-align: center;
+            font-size: .8em;
         }
 
         .team {
             margin-top: 7px;
             text-align: center;
+            font-size: .8em;
         }
 
         .slot {
