--- a/devybigboard-client/src/components/league-filters.scss
+++ b/devybigboard-client/src/components/league-filters.scss
@@ -203,6 +203,16 @@
                                 }
                             }
 
+                            &.start-draft-btn {
+                                background-color: #1976d2;
+                                color: white;
+
+                                &:hover {
+                                    background-color: #1565c0;
+                                }
+                            }
+
+
                             &:disabled {
                                 background-color: #aaa;
                                 cursor: not-allowed;
